# projekt-warcaby

./: .gitignore  CMAKE_HOW_TO.md  CMakeLists.txt  INFO.md  LICENSE  README.md  build_linux.sh  build_windows.bat  makefile
apps/: CMakeLists.txt  ascii_main.cpp  bot_main.cpp  bot_main_with_text_renderer.cpp  main.cpp  test_main.cpp  text_main.cpp  zegar.cpp
cmake/Modules/: FindPDCurses.cmake
dev_wiki/: CMAKE_HOW_TO.md
include/Warcaby/: types.h  zegar.h
include/Warcaby/Board/: board.cpp  board.h
include/Warcaby/Bot/: bot.h
include/Warcaby/Game/: game.h
include/Warcaby/Player/: bot.h  player.h
include/Warcaby/Renderer/: ascii_renderer.hpp  renderer.h  text_renderer.hpp
include/Warcaby/TextRenderer/: textrenderer.hpp
src/: CMakeLists.txt  board.cpp  bot.cpp  game.cpp  index.html  lib.js  main.cpp  main.js  types.h
src/Board/: board.h
src/Game/: game.h
src/GameViewer/: gameviewer.h
src/Player/: bot.h  player.h
src/Renderer/: ascii_renderer.cpp  renderer.h  text_renderer.cpp
src/TextRenderer/: textrenderer.cpp  textrenderer.hpp
